--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,11 @@
     <div class="PageFound HomePage Body">
         <div class="MainText">
             <div class="Content">
+               {% if page.parent_url %}
+                <div>
+                    <a href="{{ page.parent_url }}">{{ page.parent }}</a> &gt;
+                </div>
+                {% endif %}
                 <div class="Level1">
                     <h1>{{ page.title }}</h1>
                     {{ content }}
