Move documentation into docs/ subfolder.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="style/wiki.css" type="text/css" />
+    <link rel="stylesheet" href="/style/wiki.css" type="text/css" />
 </head>
 <body>
     <div class="PageFound HomePage Body">
@@ -27,7 +27,7 @@
         </div>
         <hr class="MainTextEnd"/>
         <h2 class="WikiHeader">
-            <a href="/"><img src="style/logo.png" alt="Biblia.com API Documentation" style="border-width:0;" /></a>
+            <a href="/docs/"><img src="/style/logo.png" alt="Biblia.com API Documentation" style="border-width:0;" /></a>
         </h2>
     </div>
     <div class="HeaderBackground"></div>
