--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
             </div>
             <hr class="ContentEnd" />
             <div class="Footer">
-                <p>API.Biblia.com is a service provided by Faithlife Corporation &bull; <a href="https://github.com/Faithlife/apidocs.biblia.com">Powered by GitHub Pages</a></p>
+                <p>API.Biblia.com is a service provided by Faithlife Corporation &bull; <a href="https://github.com/Faithlife/bibliaapi.com">Powered by GitHub Pages</a></p>
             </div>
         </div>
         <hr class="MainTextEnd"/>
